--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -1,3 +1,12 @@
-.intro__text {
-    font-weight: bold;
+.index__heading {
+    text-align: center;
+}
+
+.homepage__logo {
+    max-width: 60px;
+    margin-left: 20px;
+}
+
+.contact__section {
+    margin-top: 50px;
 }
