--- a/sass/partials/_productsContainer.scss
+++ b/sass/partials/_productsContainer.scss
@@ -22,6 +22,6 @@
     .all__products__grid,
     .featured__container,
     .favorite__grid {
-        grid-template-columns: repeat(3, auto);
+        grid-template-columns: repeat(3, 1fr);
     }
 }
