--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -6,6 +6,10 @@ h5 {
     font-family: $font-heading;
 }
 
+h2 {
+    font-size: 1.3rem;
+}
+
 button,
 .all__products__link__container {
     font-family: $font-button;
