--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -15,6 +15,7 @@ $colours: (
     backgroundwhite: #F7F1F1,
     backgroundwhitetransparent: #f7f1f1ad,
     textcolourprimary: #423F38,
+    textcolourprimarytransparent: #423f3829,
     textcoloursecondary: #262421
 );
 
