--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 @import "partials/variables";
 @import "partials/base";
+@import "partials/scrollbar";
 @import "partials/typography";
 @import "partials/nav";
 @import "partials/footer";
