--- a/sass/partials/_details.scss
+++ b/sass/partials/_details.scss
@@ -16,6 +16,17 @@
     }
 }
 
+.product__detail__info {
+    display: grid;
+    grid-template-columns: auto;
+
+    .product__detail__price {
+        place-self: end;
+    }
+}
+
+
+
 .product__details__image {
     width: 100%;
     height: 350px;
@@ -47,7 +58,6 @@
         .product__detail__info {
             grid-column-start: 2;
             grid-column-end: 3;
-            display: grid;
             grid-template-rows: auto auto 1fr;
 
             h2 {
@@ -60,7 +70,6 @@
             }
 
             .product__detail__price {
-                place-self: end;
                 font-size: 1.4rem;
             }
         }
@@ -79,5 +88,11 @@
                 width: 100%;
             }
         }
+    }
+}
+
+@media(min-width: 720px) and (max-width: 1000px) {
+    .content__wrapper {
+        margin: 130px 30px 0px 30px;
     }
 }
