--- a/css/style.css
+++ b/css/style.css
@@ -646,7 +646,7 @@ footer p {
   width: 100%;
   height: 100vh;
   z-index: 500;
-  background-color: #B2C6BD;
+  background-color: #F7F1F1;
 }
 
 .loading__home__container .loading__home__page {
@@ -744,7 +744,7 @@ button:hover,
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 30px;
+  margin-top: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
