--- a/sass/partials/_loading.scss
+++ b/sass/partials/_loading.scss
@@ -37,7 +37,7 @@
     width: 100%;
     height: 100vh;
     z-index: 500;
-    background-color: getColour(secondaryturquoise);
+    background-color: getColour(backgroundwhite);
 
     .loading__home__page {
         position: relative;
