--- a/css/style.css
+++ b/css/style.css
@@ -1091,6 +1091,10 @@ input[type="search"]::-webkit-search-cancel-button {
   }
 }
 
+.index__heading__container {
+  margin: 30px 0px;
+}
+
 .index__heading {
   text-align: center;
 }
