--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -7,6 +7,7 @@ footer {
     margin-top: 40px;
     justify-content: center;
     width: 100%;
+    max-width: 100%;
 
     p {
         font-size: 0.8rem;
