--- a/css/style.css
+++ b/css/style.css
@@ -1260,7 +1260,11 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 .product__detail__info .product__detail__price {
+  min-width: 85px;
   place-self: end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .product__details__image {
