--- a/sass/partials/_details.scss
+++ b/sass/partials/_details.scss
@@ -70,8 +70,10 @@
         }
 
         .product__details__btn {
+            grid-column-start: 1;
+            grid-column-end: 3;
+            width: 100%;
             height: 50px;
-
         }
 
         .product__details__btn__container {
