--- a/sass/partials/_details.scss
+++ b/sass/partials/_details.scss
@@ -21,8 +21,8 @@
     grid-template-columns: auto;
 
     .product__detail__price {
-        min-width: 85px;
         place-self: end;
+        display: flex;
     }
 }
 
