updated herobanner loader position

--- a/sass/partials/_loading.scss
+++ b/sass/partials/_loading.scss
@@ -7,6 +7,10 @@
     margin-bottom: 50px;
 }
 
+.loading__herobanner {
+    margin-top: 130px;
+}
+
 .sending__data {
     margin-top: 30px;
     display: none;
