--- a/sass/partials/_basket.scss
+++ b/sass/partials/_basket.scss
@@ -136,6 +136,10 @@ hr {
 }
 
 @media(min-width: 720px) {
+    .basket__container {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
 
     .product__trash,
     .sum__container p,
