--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,5 @@
 @import "partials/variables";
 @import "partials/base";
-@import "partials/scrollbar";
 @import "partials/typography";
 @import "partials/nav";
 @import "partials/footer";
@@ -10,6 +9,7 @@
 @import "partials/buttons";
 @import "partials/herobanner";
 @import "partials/productsContainer";
+@import "partials/containers";
 @import "partials/productCard";
 @import "partials/pagination";
 @import "partials/input";
