--- a/sass/partials/_buttons.scss
+++ b/sass/partials/_buttons.scss
@@ -1,8 +1,3 @@
-button:hover,
-.logout__btn:hover {
-    cursor: pointer;
-}
-
 .standard__cta__btn {
     width: 300px;
     height: 40px;
@@ -54,8 +49,6 @@ button:hover,
 }
 
 .all__products__link__container:hover {
-    cursor: pointer;
-    box-shadow: 3px 3px 3px getColour(primaryred);
 
     .logo_btn {
         max-width: 60px;
@@ -110,6 +103,58 @@ button:hover,
     max-width: 170px;
 }
 
+.clearbtn,
+.clear__favorites__btn {
+    display: flex;
+    align-items: center;
+    border: 2px solid getColour(highlightorange);
+    border-radius: 2px;
+    background-color: getColour(backgroundwhite);
+    width: 160px;
+    height: 40px;
+    align-self: end;
+    order: 1;
+}
+
+.clearbtn:hover,
+.clear__favorites__btn:hover,
+.all__products__link__container:hover {
+    box-shadow: 3px 3px 3px getColour(primaryred);
+}
+
+.clear__favorites__btn {
+    width: 200px;
+}
+
+.clear__favorites__btn p,
+.clearbtn p {
+    margin: 0px 20px 0px 10px;
+    font-size: 1rem;
+    color: getColour(textcolourprimary);
+}
+
+.counter__btn {
+    border: 2px solid getColour(highlightorange);
+    font-size: 0.7rem;
+    align-self: center;
+    padding: 5px;
+}
+
+.close__btn {
+    font-size: 2.5rem;
+}
+
+button:hover,
+.logout__btn:hover,
+.clearbtn:hover,
+.clear__favorites__btn:hover,
+.counter__btn:hover,
+.product__trash:hover,
+.clearbtn:hover,
+.all__products__link__container:hover {
+    cursor: pointer;
+}
+
 @media(min-width: 720px) {
     .login__btn {
         height: 50px;
@@ -124,4 +169,10 @@ button:hover,
     .modal__btn {
         margin: 20px 0px;
     }
+
+    .counter__btn {
+        padding: 10px;
+        font-size: 1.3rem;
+    }
+
 }
