--- a/sass/partials/_loading.scss
+++ b/sass/partials/_loading.scss
@@ -20,14 +20,13 @@
     max-width: 100px;
 }
 
-.loading__symbol__one {
+.loading__symbol__one,
+.loading__symbol__two {
     animation: 4000ms flyingAnimation ease-in-out infinite;
     opacity: 0;
 }
 
 .loading__symbol__two {
-    animation: 4000ms flyingAnimation ease-in-out infinite;
-    opacity: 0;
     animation-delay: 1000ms;
     position: absolute;
     top: 26px;
