--- a/sass/partials/_input.scss
+++ b/sass/partials/_input.scss
@@ -45,6 +45,7 @@ input[type=file]::file-selector-button {
     background-color: getColour(backgroundwhite);
     font-family: $font-primary;
     padding-bottom: 5px;
+    color: getColour(textcolourprimary);
 }
 
 input[type=file]::file-selector-button:hover {
